--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "dotenv": "16.4.5",
     "express": "4.20.0",
     "express-session": "1.18.0",
-    "jsonwebtoken": "9.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "6.8.1",
     "mongoose": "8.6.1",
     "validator": "13.12.0"
