--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
+    "reselect": "^5.1.1",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.5"
   },
