--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "reselect": "^5.1.1",
+    "sonner": "^1.7.0",
     "styled-components": "^6.1.13",
     "sweetalert2": "^11.14.5"
   },
