--- a/backend/package.json
+++ b/backend/package.json
@@ -16,14 +16,14 @@
   "dependencies": {
     "bcrypt": "5.1.1",
     "body-parser": "1.20.3",
-    "cookie-parser": "1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "16.4.5",
     "express": "^4.20.0",
-    "express-session": "1.18.0",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "6.8.1",
-    "mongoose": "8.6.1",
+    "mongoose": "^8.8.4",
     "validator": "13.12.0"
   },
   "nodemonConfig": {
